--- a/source/css/style.css
+++ b/source/css/style.css
@@ -385,7 +385,7 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 33px;
-  padding-bottom: 274px;
+  padding-bottom: 273px;
   overflow-x: hidden; }
 
 .page-header__top {
@@ -480,7 +480,7 @@ input[type="radio"].visually-hidden {
 
 .page-header__btn {
   width: 407px;
-  height: 55px;
+  min-height: 55px;
   border-radius: 5px;
   background-color: #00b2ff;
   text-decoration: none;
@@ -821,7 +821,7 @@ input[type="radio"].visually-hidden {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  padding-bottom: 110px; }
+  padding-bottom: 107px; }
 
 .about-company__description {
   margin-left: 180px; }
@@ -852,6 +852,7 @@ input[type="radio"].visually-hidden {
 
 .about-company__btn {
   display: block;
+  word-break: break-word;
   width: 180px;
   text-decoration: none;
   font-family: "Roboto Condensed", "Calibri", sans-serif;
@@ -920,7 +921,7 @@ input[type="radio"].visually-hidden {
 .services {
   background-color: #1b2d37;
   padding-top: 89px;
-  padding-bottom: 128px; }
+  padding-bottom: 96px; }
   .services h2 {
     font-family: "Roboto Condensed", "Calibri", sans-serif;
     font-style: normal;
@@ -935,9 +936,8 @@ input[type="radio"].visually-hidden {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
 
 .services__item {
   position: relative;
@@ -948,7 +948,11 @@ input[type="radio"].visually-hidden {
   text-decoration: none;
   padding-top: 50px;
   padding-left: 43px;
-  border: 1px solid transparent; }
+  border: 1px solid transparent;
+  margin-right: 30px;
+  margin-bottom: 30px; }
+  .services__item:nth-of-type(3n) {
+    margin-right: 0; }
   .services__item::after {
     content: "";
     position: absolute;
@@ -1296,7 +1300,7 @@ input[type="radio"].visually-hidden {
     bottom: 52px; }
 
 .page-footer__inner {
-  max-width: 1416px;
+  max-width: 1466px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1310,7 +1314,6 @@ input[type="radio"].visually-hidden {
 
 .page-footer__social {
   position: relative;
-  margin-right: 50px;
   padding-left: 25px; }
   .page-footer__social p {
     position: absolute;
@@ -1321,7 +1324,7 @@ input[type="radio"].visually-hidden {
     width: 233px;
     margin: 0;
     bottom: -97px;
-    left: 223px;
+    left: 246px;
     color: #1b2d37;
     opacity: 0.5; }
   .page-footer__social img {
@@ -1329,7 +1332,9 @@ input[type="radio"].visually-hidden {
     margin-bottom: 54px; }
 
 .page-footer__nav {
-  width: 35.5%; }
+  width: 35.5%;
+  max-width: 430px;
+  margin-right: 30px; }
   .page-footer__nav p {
     font-family: "Roboto Condensed", "Calibri", sans-serif;
     font-style: normal;
@@ -1496,49 +1501,35 @@ input[type="radio"].visually-hidden {
   .page-footer__nav {
     position: relative;
     width: 100%;
+    max-width: 100%;
+    margin-right: 0;
     padding-left: 15px;
     padding-right: 15px;
     border-top: 1px solid rgba(98, 105, 98, 0.2);
-    border-bottom: 1px solid rgba(98, 105, 98, 0.2); }
+    border-bottom: 1px solid rgba(98, 105, 98, 0.2);
+    background-image: url("../img/plus.svg");
+    background-size: 16px 16px;
+    background-position: 287px 28px;
+    background-repeat: no-repeat; }
     .page-footer__nav p {
       margin-bottom: 0;
       padding-top: 28px;
       padding-bottom: 28px;
       cursor: pointer; }
-    .page-footer__nav::before {
-      content: "";
-      position: absolute;
-      top: 36px;
-      right: 17px;
-      width: 16px;
-      height: 1px;
-      background-color: #c4c4c4; }
-    .page-footer__nav p::after {
-      content: "";
-      position: absolute;
-      top: 27.5px;
-      right: 24.5px;
-      width: 1px;
-      height: 16px;
-      background-color: #c4c4c4; }
   .page-footer__contacts {
     width: 100%;
-    margin-top: 30px;
     margin-right: 0;
     position: relative;
     padding-left: 15px;
     padding-right: 15px;
-    padding-bottom: 26px; }
+    background-image: url("../img/minus.svg");
+    background-position: 287px 33px;
+    background-repeat: no-repeat; }
     .page-footer__contacts h3 {
-      margin-bottom: 30px; }
-      .page-footer__contacts h3::before {
-        content: "";
-        position: absolute;
-        top: 7px;
-        right: 17px;
-        width: 16px;
-        height: 1px;
-        background-color: #c4c4c4; }
+      margin-bottom: 0px;
+      padding-top: 28px;
+      padding-bottom: 28px;
+      cursor: pointer; }
     .page-footer__contacts p {
       width: 272px; }
   .page-footer__bottom {
@@ -1581,7 +1572,10 @@ input[type="radio"].visually-hidden {
       flex-wrap: wrap;
   list-style: none;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .footer-nav__item a {
   font-size: 15px;
@@ -1592,9 +1586,6 @@ input[type="radio"].visually-hidden {
   .footer-nav__item a:hover {
     text-decoration: underline;
     color: #000000; }
-
-.footer-nav__item:first-of-type {
-  margin-right: 74px; }
 
 .footer-nav__group {
   list-style: none;
@@ -1780,5 +1771,16 @@ input[type="radio"].visually-hidden {
   padding-bottom: 60px;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.8); }
+
+.footer-contacts__list {
+  display: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 26px; }
+
+@media (max-width: 767px) {
+  .footer-contacts__hidden {
+    display: block; } }
 
 /*# sourceMappingURL=style.css.map */
