--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -4,6 +4,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  justify-content: space-between;
 }
 
 .footer-nav__item {
@@ -18,10 +19,6 @@
       text-decoration: underline;
       color: #000000;
     }
-  }
-
-  &:first-of-type {
-    margin-right: 74px;
   }
 }
 
