--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -14,7 +14,7 @@
 }
 
 .page-footer__inner {
-  max-width: 1416px;
+  max-width: 1466px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -24,7 +24,6 @@
 
 .page-footer__social {
   position: relative;
-  margin-right: 50px;
   padding-left: 25px;
 
   & p {
@@ -36,7 +35,7 @@
     width: 233px;
     margin: 0;
     bottom: -97px;
-    left: 223px;
+    left: 246px;
     color: $color-f;
     opacity: 0.5;
   }
@@ -49,6 +48,8 @@
 
 .page-footer__nav {
   width: 35.5%;
+  max-width: 430px;
+  margin-right: 30px;
 
   & p {
     font-family: $font-robotoCondensed, "Calibri", sans-serif;
@@ -253,10 +254,16 @@
   .page-footer__nav {
     position: relative;
     width: 100%;
+    max-width: 100%;
+    margin-right: 0;
     padding-left: 15px;
     padding-right: 15px;
     border-top: 1px solid rgba(98, 105, 98, 0.2);
     border-bottom: 1px solid rgba(98, 105, 98, 0.2);
+    background-image: url("../img/plus.svg");
+    background-size: 16px 16px;
+    background-position: 287px 28px;
+    background-repeat: no-repeat;
 
     & p {
       margin-bottom: 0;
@@ -264,49 +271,24 @@
       padding-bottom: 28px;
       cursor: pointer;
     }
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 36px;
-      right: 17px;
-      width: 16px;
-      height: 1px;
-      background-color: #c4c4c4;
-    }
-
-    & p::after {
-      content: "";
-      position: absolute;
-      top: 27.5px;
-      right: 24.5px;
-      width: 1px;
-      height: 16px;
-      background-color: #c4c4c4;
-    }
   }
 
   .page-footer__contacts {
     width: 100%;
-    margin-top: 30px;
     margin-right: 0;
     position: relative;
     padding-left: 15px;
     padding-right: 15px;
-    padding-bottom: 26px;
+    background-image: url("../img/minus.svg");
+    background-position: 287px 33px;
+    background-repeat: no-repeat;
 
     & h3 {
-      margin-bottom: 30px;
+      margin-bottom: 0px;
+      padding-top: 28px;
+      padding-bottom: 28px;
+      cursor: pointer;
 
-      &::before {
-        content: "";
-        position: absolute;
-        top: 7px;
-        right: 17px;
-        width: 16px;
-        height: 1px;
-        background-color: #c4c4c4;
-      }
     }
 
     & p {
