--- a/source/css/style.css
+++ b/source/css/style.css
@@ -457,6 +457,7 @@ input[type="radio"].visually-hidden {
     background-size: cover; }
 
 .page-header__link {
+  width: 182px;
   padding: 14px 27px;
   margin-left: 50px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -495,6 +496,8 @@ input[type="radio"].visually-hidden {
   letter-spacing: 0.05em;
   text-transform: uppercase;
   cursor: pointer; }
+  .page-header__btn b:last-of-type {
+    display: none; }
   .page-header__btn:hover {
     background-color: inherit;
     border: 1px solid #ffffff;
@@ -545,7 +548,11 @@ input[type="radio"].visually-hidden {
     width: 287px;
     margin: 0;
     padding: 0;
-    margin-left: -3px; } }
+    margin-left: -3px; }
+    .page-header__btn b:first-of-type {
+      display: none; }
+    .page-header__btn b:last-of-type {
+      display: block; } }
 
 .logo img {
   display: block; }
@@ -577,7 +584,7 @@ input[type="radio"].visually-hidden {
 
 .start-home__message {
   position: relative;
-  z-index: 1;
+  z-index: 3;
   max-width: 55%; }
 
 .start-home__title {
@@ -758,7 +765,7 @@ input[type="radio"].visually-hidden {
   .advantages__item {
     max-width: 47.891%;
     padding-top: 24px;
-    padding-right: 21px;
+    padding-right: 19px;
     padding-bottom: 10px;
     padding-left: 24px;
     min-height: 306px; }
@@ -937,11 +944,14 @@ input[type="radio"].visually-hidden {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .services__item {
   position: relative;
-  width: 31.624%;
+  width: 31.623%;
   height: 620px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -949,7 +959,6 @@ input[type="radio"].visually-hidden {
   padding-top: 50px;
   padding-left: 43px;
   border: 1px solid transparent;
-  margin-right: 30px;
   margin-bottom: 30px; }
   .services__item:nth-of-type(3n) {
     margin-right: 0; }
@@ -994,8 +1003,8 @@ input[type="radio"].visually-hidden {
 
 @media (max-width: 1023px) {
   .services {
-    padding-top: 51px;
-    padding-bottom: 78px; }
+    padding-top: 48px;
+    padding-bottom: 32px; }
     .services h2 {
       width: 86%;
       font-size: 32px;
@@ -1011,7 +1020,8 @@ input[type="radio"].visually-hidden {
     width: 99.945%;
     height: 256px;
     padding-top: 40px;
-    padding-left: 45px; }
+    padding-left: 45px;
+    margin-bottom: 30px; }
     .services__item--production {
       background-image: url("../img/service-0-tablet@1x.png");
       background-size: cover;
@@ -1030,7 +1040,7 @@ input[type="radio"].visually-hidden {
 
 @media (max-width: 767px) {
   .services {
-    padding-bottom: 63px; }
+    padding-bottom: 35px; }
     .services h2 {
       width: 100%;
       font-size: 28px;
@@ -1086,7 +1096,8 @@ input[type="radio"].visually-hidden {
 @media (max-width: 1023px) {
   .feedback {
     background-image: none;
-    padding-top: 79px; }
+    padding-top: 79px;
+    padding-bottom: 102px; }
   .feedback__form-wrapp {
     margin-left: 63px;
     margin-right: 62px; }
@@ -1138,7 +1149,8 @@ input[type="radio"].visually-hidden {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 100%; }
+  width: 100%;
+  padding-left: 5px; }
   .form__field-name input[type="text"] {
     width: 270px;
     height: 50px;
@@ -1147,7 +1159,8 @@ input[type="radio"].visually-hidden {
     padding-left: 16px;
     color: #ffffff;
     background-color: #19baff;
-    border: none; }
+    border: none;
+    border-radius: 0; }
   .form__field-name input::-webkit-input-placeholder {
     color: #ffffff; }
   .form__field-name input::-moz-placeholder {
@@ -1161,8 +1174,9 @@ input[type="radio"].visually-hidden {
 
 .form__field-textarea {
   width: 100%;
-  margin-top: 40px;
-  margin-bottom: 37px; }
+  margin-top: 43px;
+  margin-bottom: 37px;
+  padding-left: 5px; }
   .form__field-textarea textarea {
     resize: none;
     width: 100%;
@@ -1173,7 +1187,8 @@ input[type="radio"].visually-hidden {
     background-color: #19baff;
     color: #ffffff;
     padding-top: 13px;
-    padding-left: 16px; }
+    padding-left: 16px;
+    border-radius: 0; }
     .form__field-textarea textarea::-webkit-input-placeholder {
       color: #ffffff; }
     .form__field-textarea textarea::-moz-placeholder {
@@ -1243,6 +1258,11 @@ input[type="radio"].visually-hidden {
     background-position: center center; }
 
 @media (max-width: 1023px) {
+  .form__field-bottom label {
+    width: 238px; }
+  .form__field-bottom button {
+    width: 280px;
+    height: 47px; }
   .form {
     width: 100%; }
     .form p:first-of-type {
@@ -1252,7 +1272,9 @@ input[type="radio"].visually-hidden {
     .form p:last-of-type {
       margin-bottom: 55px; }
   .form__field-name input[type="text"] {
-    width: 48%; } }
+    width: 47.4%; }
+  .form__field-textarea textarea {
+    height: 160px; } }
 
 @media (max-width: 767px) {
   .form p:first-of-type {
@@ -1323,7 +1345,7 @@ input[type="radio"].visually-hidden {
     text-transform: uppercase;
     width: 233px;
     margin: 0;
-    bottom: -97px;
+    bottom: -69px;
     left: 246px;
     color: #1b2d37;
     opacity: 0.5; }
@@ -1385,7 +1407,7 @@ input[type="radio"].visually-hidden {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 60px;
+  margin-top: 33px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
@@ -1509,7 +1531,7 @@ input[type="radio"].visually-hidden {
     border-bottom: 1px solid rgba(98, 105, 98, 0.2);
     background-image: url("../img/plus.svg");
     background-size: 16px 16px;
-    background-position: 287px 28px;
+    background-position: 94.4% 28px;
     background-repeat: no-repeat; }
     .page-footer__nav p {
       margin-bottom: 0;
@@ -1522,8 +1544,9 @@ input[type="radio"].visually-hidden {
     position: relative;
     padding-left: 15px;
     padding-right: 15px;
-    background-image: url("../img/minus.svg");
-    background-position: 287px 33px;
+    background-image: url("../img/plus.svg");
+    background-size: 16px 16px;
+    background-position: 94.4% 28px;
     background-repeat: no-repeat; }
     .page-footer__contacts h3 {
       margin-bottom: 0px;
@@ -1545,7 +1568,12 @@ input[type="radio"].visually-hidden {
     border-top: 1px solid rgba(98, 105, 98, 0.2); }
     .page-footer__bottom a:last-of-type {
       margin-left: 0;
-      margin-top: 20px; } }
+      margin-top: 20px; }
+  .page-footer__open {
+    background-image: url("../img/minus.svg");
+    background-size: 16px 16px;
+    background-position: 94.4% 28px;
+    background-repeat: no-repeat; } }
 
 .social-list {
   list-style: none;
@@ -1611,15 +1639,15 @@ input[type="radio"].visually-hidden {
   width: 490px;
   background-color: #00b2ff;
   position: absolute;
-  top: 50%;
+  top: 50.4%;
   margin-top: -302.5px;
   left: 50%;
   margin-left: -245px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-left: 40px;
+  padding-left: 39px;
   padding-right: 40px;
-  padding-top: 35px;
+  padding-top: 30px;
   padding-bottom: 35px;
   z-index: 100; }
 
@@ -1638,6 +1666,8 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover; }
+  .modal__close:hover {
+    border: 1px solid #ffffff; }
 
 .callback-form {
   width: 100%; }
@@ -1656,7 +1686,7 @@ input[type="radio"].visually-hidden {
     margin: 0;
     padding-left: 4px;
     color: #ffffff;
-    margin-bottom: 52px; }
+    margin-bottom: 33px; }
 
 .callback-form__field-name {
   width: 100%;
@@ -1666,10 +1696,11 @@ input[type="radio"].visually-hidden {
     height: 52px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    padding-left: 16px;
+    padding-left: 24px;
     color: #ffffff;
     background-color: #19baff;
-    border: none; }
+    border: none;
+    border-radius: 0; }
   .callback-form__field-name input::-webkit-input-placeholder {
     color: #ffffff; }
   .callback-form__field-name input::-moz-placeholder {
@@ -1685,7 +1716,7 @@ input[type="radio"].visually-hidden {
 
 .callback-form__field-textarea {
   width: 100%;
-  margin-bottom: 30px; }
+  margin-bottom: 25px; }
   .callback-form__field-textarea textarea {
     width: 100%;
     height: 104px;
@@ -1695,7 +1726,8 @@ input[type="radio"].visually-hidden {
     background-color: #19baff;
     color: #ffffff;
     padding-top: 13px;
-    padding-left: 16px; }
+    padding-left: 24px;
+    border-radius: 0; }
     .callback-form__field-textarea textarea::-webkit-input-placeholder {
       color: #ffffff; }
     .callback-form__field-textarea textarea::-moz-placeholder {
@@ -1727,7 +1759,7 @@ input[type="radio"].visually-hidden {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     border-radius: 5px;
-    margin-bottom: 35px;
+    margin-bottom: 28px;
     cursor: pointer; }
     .callback-form__field-bottom button:hover {
       background-color: #ffffff;
@@ -1741,7 +1773,8 @@ input[type="radio"].visually-hidden {
     padding-left: 50px;
     padding-top: 9px;
     font-size: 14px;
-    line-height: 16px; }
+    line-height: 16px;
+    cursor: pointer; }
     .callback-form__field-bottom label::before {
       content: "";
       position: absolute;
@@ -1750,7 +1783,7 @@ input[type="radio"].visually-hidden {
       -webkit-box-sizing: border-box;
               box-sizing: border-box;
       border: 1px solid #ffffff;
-      left: 18px; }
+      left: 0; }
   .callback-form__field-bottom input[type="checkbox"]:checked + label::before {
     content: "";
     background-image: url("../img/vector.svg");
@@ -1762,7 +1795,7 @@ input[type="radio"].visually-hidden {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
@@ -1773,14 +1806,21 @@ input[type="radio"].visually-hidden {
   background-color: rgba(0, 0, 0, 0.8); }
 
 .footer-contacts__list {
-  display: none;
   list-style: none;
   margin: 0;
   padding: 0;
   padding-bottom: 26px; }
 
 @media (max-width: 767px) {
+  .footer-contacts__list {
+    display: none; }
   .footer-contacts__hidden {
-    display: block; } }
+    display: block; }
+  .footer-contacts__open {
+    display: block;
+    background-image: url("../img/minus.svg");
+    background-size: 16px 16px;
+    background-position: 94.4% 28px;
+    background-repeat: no-repeat; } }
 
 /*# sourceMappingURL=style.css.map */
