--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -31,6 +31,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding-left: 5px;
 
   & input[type="text"] {
     width: 270px;
@@ -40,6 +41,7 @@
     color: #ffffff;
     background-color: #19baff;
     border: none;
+    border-radius: 0;
   }
 
   & input::placeholder {
@@ -49,8 +51,9 @@
 
 .form__field-textarea {
   width: 100%;
-  margin-top: 40px;
+  margin-top: 43px;
   margin-bottom: 37px;
+  padding-left: 5px;
 
   & textarea {
     resize: none;
@@ -62,6 +65,7 @@
     color: #ffffff;
     padding-top: 13px;
     padding-left: 16px;
+    border-radius: 0;
 
     &::placeholder {
       color: #ffffff;
@@ -132,6 +136,18 @@
 }
 
 @media (max-width: $table-width) {
+
+  .form__field-bottom label {
+    width: 238px;
+  }
+
+  .form__field-bottom {
+    & button {
+      width: 280px;
+      height: 47px;
+    }
+  }
+
   .form {
     width: 100%;
 
@@ -148,7 +164,13 @@
 
   .form__field-name {
     & input[type="text"] {
-      width: 48%;
+      width: 47.4%;
+    }
+  }
+
+  .form__field-textarea {
+    & textarea {
+      height: 160px;
     }
   }
 }
