--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -110,7 +110,7 @@
 
 .page-header__btn {
   width: 407px;
-  min-height: 55px;
+  padding: 17px 28px;
   border-radius: 5px;
   background-color: #00b2ff;
   text-decoration: none;
