--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -23,6 +23,7 @@
   margin-right: 30px;
   margin-bottom: 30px;
   background-color: #ffffff;
+  color: #666666;
 
   &:nth-child(2n) {
     margin-right: 0;
