--- a/source/sass/blocks/callback-form.scss
+++ b/source/sass/blocks/callback-form.scss
@@ -60,6 +60,7 @@
     padding-top: 13px;
     padding-left: 24px;
     border-radius: 0;
+    resize: none;
 
     &::placeholder {
       color: #ffffff;
@@ -108,6 +109,10 @@
     line-height: 16px;
     cursor: pointer;
 
+    &:hover {
+      text-decoration: underline;
+    }
+
     &::before {
       content: "";
       position: absolute;
@@ -117,6 +122,11 @@
       border: 1px solid #ffffff;
       left: 0;
     }
+  }
+
+  & input[type="checkbox"] {
+    right: 404px;
+    top: 98px;
   }
 
   & input[type="checkbox"]:checked + label::before {
