--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -115,6 +115,10 @@
     line-height: 16px;
     cursor: pointer;
 
+    &:hover {
+      text-decoration: underline;
+    }
+
     &::before {
       content: "";
       position: absolute;
@@ -124,6 +128,11 @@
       border: 1px solid #ffffff;
       left: 18px;
     }
+  }
+
+  & input[type="checkbox"] {
+    right: 253px;
+    top: 43px;
   }
 
   & input[type="checkbox"]:checked + label::before {
